-Done 12 API Controller, Service, Dto

--- a/src/Rookie.Ecom.Customer/Pages/Customer.cshtml
+++ b/src/Rookie.Ecom.Customer/Pages/Customer.cshtml
@@ -13,8 +13,8 @@
         {
             <tr>
                 <td>@m.Id</td>
-                <td>@m.Name</td>
-                </tr>
+                <td>@m.CategoryName</td>
+              </tr>
         }
-    
+   
 </table>
